# Ray_Trace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Ray_Trace  cmake_install.cmake  config.hpp  imgui.ini  main.cpp  makefile  raycast.frag  raytracing.frag  sfml-app  test.txt
include/: config.hpp
include/ImGui/: imconfig.h
src/: CMakeLists.txt  main.cpp  raycast.frag  raytracing.frag
